# ITMO-ACS-Backend-2026-C

./: .gitignore  README.md
БР2.1/Алексеев Николай/homeworks/hw2/: package-lock.json  package.json  server.mjs  tspconfig.yaml
БР2.1/Алексеев Николай/labs/lab1/: main.tsp  package-lock.json  package.json  tsconfig.json
БР2.1/Андронов Денис/homeworks/hw1/: Andronov_hw1.drawio.xml
БР2.1/Андронов Денис/homeworks/hw2/: main.tsp  package-lock.json  package.json
БР2.1/КлапневаДиана/homeworks/hw1/: Клапнева_Диана_БД_Сервис_Аренды.drawio
БР2.1/КлапневаДиана/homeworks/hw2/: DianaKlapnevaHttpSchema.txt  DianaKlapnevaYamlFile.txt
БР2.2/: main.tsp  openapi.yaml
БР2.2/Гольцман Глеб/homeworks/hw1/: ДЗ1_Гольцман_Глеб_БР2.2.drawio
БР2.2/Гольцман Глеб/homeworks/hw2/: openapi.yaml
БР2.2/Гольцман Глеб/homeworks/hw3/: ДЗ3_Гольцман_Глеб_БР2.2.docx
БР2.2/Епифанов Кирилл/homeworks/hw2/: notes.txt  rentalApi.yaml  rentalApi.yml
БР2.2/Зарецкий Юрий/homeworks/hm2/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.tsp  package-lock.json  package.json  server.mjs
БР2.2/Зарецкий Юрий/homeworks/hm3/: Аренда помещений  — E2E Сценарий.postman_collection.json
БР2.2/Зарецкий Юрий/homeworks/hw1/: БР-БД.drawio
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  uvicornlogs.json
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/: container.py  main.py  settings.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/clients/: identity.py  property.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/db/: base.py  conversations.py  deal_projection.py  messages.py  property_projection.py  reviews.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/events/: consts.py  consumer.py  schemas.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/handlers/: conversations.py  messages.py  reviews.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/schemas/: dto.py  queries.py  requests.py  responses.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/app/services/: conversations.py  errors.py  kafka_projection.py  messages.py  property_engagement.py  reviews.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/migrations/: env.py
БР2.2/Зарецкий Юрий/labs/lab2/engagement-service/migrations/versions/: 001_initial.py  002_projections.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/: .env.example  README.md  pyproject.toml
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/: consts.py  container.py  enums.py  logger.py  main.py  settings.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/db/: users.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/events/: consts.py  schemas.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/handlers/: auth.py  deps.py  internal.py  users.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/schemas/: requests.py  responses.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/app/services/: auth.py  errors.py  users.py
БР2.2/Зарецкий Юрий/labs/lab2/identity-service/migrations/versions/: 001_initial_users.py
(+528 files in other folders)
