[project]
name = "engagement-service"
version = "0.1.0"
description = "Сервис переписок и отзывов (Engagement)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiokafka",
    "alembic",
    "asyncpg",
    "dependency-injector",
    "fastapi",
    "httpx",
    "passlib[bcrypt]",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "sentry-sdk",
    "sqlalchemy[asyncio]",
    "sqlmodel",
    "structlog",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "FA", "RUF001", "RUF002", "RUF003", "S105"]

[tool.ruff.lint.per-file-ignores]
"app/db/**/*.py" = [
    "PLR0912",
    "PLR0913",
    "C901",
    "SIM108",
    "TC001",
    "TC002",
    "TC003",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka", "jose"]
ignore_missing_imports = true
