[project]
name = "identity-service"
version = "0.1.0"
description = "Сервис аутентификации и пользователей (Identity)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic",
    "asyncpg",
    "dependency-injector",
    "bcrypt",
    "email-validator",
    "fastapi",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "sentry-sdk",
    "sqlalchemy[asyncio]",
    "sqlmodel",
    "structlog",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "FA", "RUF001", "RUF002", "RUF003", "S105"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose", "bcrypt"]
ignore_missing_imports = true
